--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 language: ruby
 sudo: false
 cache: bundler
-script: 'bundle exec rake test:coverage --trace'
 before_install:
   - gem install bundler
+script:
+  - bundle exec rubocop
+  - bundle exec rake test
 rvm:
-  - 1.9.3
   - 2.0
   - 2.1
   - 2.2
-  - 2.3.0
+  - 2.3
   - ruby-head
-  - jruby
   - jruby-head
-  - rbx-2
+  - rbx-3
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
+    - rvm: rbx-3
