--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,10 @@ matrix:
     - rvm: ruby-head
     - rvm: jruby-head
     - rvm: rbx-3
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/a44b19cc5cf6db25fa87
+    on_success: change
+    on_failure: always
+    on_start: never
