--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
 AllCops:
   NewCops: enable
   TargetRubyVersion: 2.7
@@ -11,17 +9,25 @@ require:
   - rubocop-thread_safety
 
 Style/StringLiterals:
+  Enabled: true
   EnforcedStyle: double_quotes
 
-# We do not need to support Ruby 1.9, so this is good to use.
+Style/StringLiteralsInInterpolation:
+  Enabled: true
+  EnforcedStyle: double_quotes
+
 Style/SymbolArray:
   Enabled: true
 
-# Most readable form.
 Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
-# Check with yard instead.
+Layout/LineLength:
+  Max: 120
+  Exclude:
+    - 'test/support/test4.rb'
+
 Style/Documentation:
-  Enabled: false
+  Exclude:
+    - 'test/**/*'
