--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ inherit_mode:
 
 AllCops:
   NewCops: enable
-  TargetRubyVersion: 3.2
+  TargetRubyVersion: 3.1
 
 require:
   - rubocop-md
@@ -35,3 +35,9 @@ Layout/LineLength:
 Style/Documentation:
   Exclude:
     - 'test/**/*'
+
+Style/ArgumentsForwarding:
+  Enabled: false
+
+Naming/BlockForwarding:
+  Enabled: false
